# rask

./: Cargo.toml
.github/workflows/: rust.yml
src/: bin_storage.rs  encryption.rs  main.rs
src/bin_storage/: read.rs  tasks.rs  write.rs
src/encryption/: decrypt.rs  derivekey.rs  encrypt.rs  generatekey.rs  keychain.rs
src/encryption/keychain/: keychain.rs  load.rs
