[package]
name = "rask"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["serde"] }
hex = "0.4.3"
keyring = { version = "3.6.2", features = ["windows-native", "apple-native", "linux-native"] }
pbkdf2 = "0.12.2"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
whoami = "1.5.2"
zeroize = "1.8.1"
