[package]
name = "rask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = "0.5.3"
bincode = { version = "2.0.1", features = ["serde"] }
chacha20poly1305 = "0.10.1"
keyring = { version = "3.6.2", features = ["windows-native", "apple-native", "linux-native"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
whoami = "1.5.2"
zeroize = "1.8.1"
