[package]
name = "rask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rand = "0.9.0"
whoami = "1.5.2"
zeroize = "1.8.1"

[dependencies.bincode]
version = "2.0.1"
features = ["serde"]

[dependencies.keyring]
version = "3.6.2"
features = ["windows-native", "apple-native", "linux-native"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
